--- a/index.html
+++ b/index.html
@@ -1,282 +1,26 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Deposit – bKash / Nagad / Rocket / Binance Pay</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="color-scheme" content="light dark" />
-  <style>
-    :root { color-scheme: light dark; }
-  </style>
+  <title>Telegram WebApp Demo</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
-  <div class="max-w-3xl mx-auto p-4 sm:p-6">
-    <header class="mb-6 sm:mb-8">
-      <h1 class="text-2xl sm:text-3xl font-bold tracking-tight">ডিপোজিট পেমেন্ট</h1>
-      <p class="text-sm sm:text-base text-gray-600 dark:text-gray-300 mt-1">নিচের নম্বরগুলোতে পেমেন্ট পাঠিয়ে ট্রানজ্যাকশন ডিটেইলস সাবমিট করুন।</p>
-    </header>
-
-    <!-- Payment Methods -->
-    <section class="grid sm:grid-cols-4 gap-4">
-      <article class="method card rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800" data-name="bKash" data-number="01827750260">
-        <div class="flex items-center justify-between">
-          <span class="px-2 py-1 rounded-full text-xs bg-pink-100 text-pink-700 dark:bg-pink-900/30 dark:text-pink-300">bKash</span>
-          <button class="copyBtn px-3 py-1.5 text-sm rounded-xl bg-gray-900 text-white dark:bg-white dark:text-gray-900">Copy</button>
-        </div>
-        <p class="number font-mono text-lg mt-3 select-all">01827750260</p>
-        <p class="text-xs text-gray-500 mt-1">Personal / Send Money</p>
-      </article>
-
-      <article class="method card rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800" data-name="Nagad" data-number="01864260513">
-        <div class="flex items-center justify-between">
-          <span class="px-2 py-1 rounded-full text-xs bg-orange-100 text-orange-700 dark:bg-orange-900/30 dark:text-orange-300">Nagad</span>
-          <button class="copyBtn px-3 py-1.5 text-sm rounded-xl bg-gray-900 text-white dark:bg-white dark:text-gray-900">Copy</button>
-        </div>
-        <p class="number font-mono text-lg mt-3 select-all">01864260513</p>
-        <p class="text-xs text-gray-500 mt-1">Personal / Send Money</p>
-      </article>
-
-      <article class="method card rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800" data-name="Rocket" data-number="018277502604">
-        <div class="flex items-center justify-between">
-          <span class="px-2 py-1 rounded-full text-xs bg-purple-100 text-purple-700 dark:bg-purple-900/30 dark:text-purple-300">Rocket</span>
-          <button class="copyBtn px-3 py-1.5 text-sm rounded-xl bg-gray-900 text-white dark:bg-white dark:text-gray-900">Copy</button>
-        </div>
-        <p class="number font-mono text-lg mt-3 select-all">018277502604</p>
-        <p class="text-xs text-gray-500 mt-1">Personal / Send Money</p>
-      </article>
-
-      <article class="method card rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800" data-name="Binance Pay" data-number="1085460262">
-        <div class="flex items-center justify-between">
-          <span class="px-2 py-1 rounded-full text-xs bg-yellow-100 text-yellow-700 dark:bg-yellow-900/30 dark:text-yellow-300">Binance Pay</span>
-          <button class="copyBtn px-3 py-1.5 text-sm rounded-xl bg-gray-900 text-white dark:bg-white dark:text-gray-900">Copy</button>
-        </div>
-        <p class="number font-mono text-lg mt-3 select-all">1085460262</p>
-        <p class="text-xs text-gray-500 mt-1">Pay ID</p>
-      </article>
-    </section>
-
-    <!-- Divider -->
-    <div class="h-px bg-gray-200 dark:bg-gray-800 my-6"></div>
-
-    <!-- Service Selection -->
-    <section class="rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 sm:p-6 bg-white dark:bg-gray-800 mb-6">
-      <h2 class="text-xl font-semibold">SELECT MAIL</h2>
-      <p class="text-sm text-gray-500">কত পিস এবং কোন ধরনের অ্যাকাউন্ট নিবেন লিখুন</p>
-
-      <div class="mt-4 grid sm:grid-cols-2 gap-4">
-        <label class="grid gap-1">
-          <span class="text-sm">MAIL LIST</span>
-          <select id="service" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2">
-            <option value="HOTMAIL" data-price="2.5">HOT MAIL – 2.5৳</option>
-            <option value="OUTLOOK" data-price="2.5">OUTLOOK – 2.5৳</option>
-            <option value="GMAIL LOGIN" data-price="3.5">GMAIL LOGIN – 3.5৳</option>
-            <option value="GMAIL OTP" data-price="5">GMAIL OTP – 5৳</option>
-          </select>
-        </label>
-        <label class="grid gap-1">
-          <span class="text-sm">পরিমাণ (পিস)</span>
-          <input id="qty" type="number" min="1" value="1" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2" />
-        </label>
-      </div>
-
-      <div class="mt-4 flex items-center justify-between">
-        <p id="calcPrice" class="text-sm font-medium text-gray-800 dark:text-gray-200">মোট: 2.5৳</p>
-        <div class="flex gap-2">
-          <button id="copyAmount" class="px-3 py-1.5 text-sm rounded-xl bg-gray-900 text-white dark:bg-white dark:text-gray-900">অ্যামাউন্ট কপি</button>
-          <button id="fillAmount" class="px-3 py-1.5 text-sm rounded-xl bg-green-600 text-white dark:bg-green-500 dark:text-white">ফর্মে বসান</button>
-        </div>
-      </div>
-    </section>
-
-    <!-- Deposit Form -->
-    <section class="rounded-2xl shadow-sm border border-gray-200 dark:border-gray-800 p-4 sm:p-6 bg-white dark:bg-gray-800">
-      <h2 class="text-xl font-semibold">ডিপোজিট ফর্ম</h2>
-      <p class="text-sm text-gray-500">পেমেন্ট পাঠানোর পর নিচের তথ্য দিন।</p>
-      <form id="depositForm" class="mt-4 grid gap-4">
-        <div class="grid sm:grid-cols-2 gap-4">
-          <label class="grid gap-1">
-            <span class="text-sm">পেমেন্ট মেথড</span>
-            <select id="method" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2">
-              <option>bKash</option>
-              <option>Nagad</option>
-              <option>Rocket</option>
-              <option>Binance Pay</option>
-            </select>
-          </label>
-          <label class="grid gap-1">
-            <span class="text-sm">অ্যামাউন্ট (৳)</span>
-            <input id="amount" type="number" min="10" required placeholder="10" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2" />
-          </label>
-        </div>
-
-        <div class="grid sm:grid-cols-2 gap-4">
-          <label class="grid gap-1">
-            <span class="text-sm">আপনার নাম্বার লিখুন </span>
-            <input id="sender" type="tel" required placeholder="01XXXXXXXXX" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2" />
-          </label>
-          <label class="grid gap-1">
-            <span class="text-sm">ট্রানজ্যাকশন আইডি</span>
-            <input id="trxid" type="text" required placeholder="e.g., B8XY9ZAB" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2" />
-          </label>
-        </div>
-
-        <label class="grid gap-1">
-          <span class="text-sm">🆔 ID</span>
-          <input id="note" type="text" placeholder="🆔 ID 7358825471" class="rounded-xl border-gray-300 dark:border-gray-700 bg-transparent px-3 py-2" />
-        </label>
-
-        <div id="errorBox" class="hidden text-red-600 text-sm"></div>
-
-        <div class="flex items-center justify-between gap-3">
-          <p class="text-xs text-gray-500">ফর্ম পূরণ সাবমিট ক্লিক করুন ✅</p>
-          <button class="px-4 py-2 rounded-2xl bg-gray-900 text-white dark:bg-white dark:text-gray-900" type="submit">সাবমিট</button>
-        </div>
-      </form>
-
-      <!-- Success Panel -->
-      <div id="successPanel" class="hidden mt-6 border border-green-200 dark:border-green-900 rounded-2xl p-4 bg-green-50 dark:bg-green-900/20">
-        <h3 class="text-lg font-semibold">ডিপোজিট সফল হয়েছে</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">আমাদের টিম শিগগিরই যাচাই করবে।</p>
-        <dl id="summary" class="mt-3 grid sm:grid-cols-2 gap-x-6 gap-y-2 text-sm"></dl>
-      </div>
-    </section>
-  </div>
+<body>
+  <h2>আপনার Telegram Chat ID</h2>
+  <div id="result">লোড হচ্ছে...</div>
 
   <script>
-    // --- Copy buttons ---
-    document.querySelectorAll('.method').forEach(card => {
-      const btn = card.querySelector('.copyBtn');
-      const numberEl = card.querySelector('.number');
-      btn.addEventListener('click', async () => {
-        try {
-          await navigator.clipboard.writeText((card.dataset.number || numberEl.textContent).trim());
-          const old = btn.textContent;
-          btn.textContent = 'Copied!';
-          btn.disabled = true;
-          setTimeout(() => { btn.textContent = old; btn.disabled = false; }, 1200);
-        } catch {
-          console.log('Copy failed');
-        }
-      });
-    });
+    // Telegram WebApp অবজেক্ট থেকে ডেটা নিন
+    const tg = window.Telegram.WebApp;
+    const user = tg.initDataUnsafe.user;
 
-    // --- Service price calculation ---
-    const service = document.getElementById('service');
-    const qty = document.getElementById('qty');
-    const calcPrice = document.getElementById('calcPrice');
-    const copyAmount = document.getElementById('copyAmount');
-    const fillAmount = document.getElementById('fillAmount');
-    const amountInput = document.getElementById('amount');
-
-    function updatePrice() {
-      const price = parseFloat(service.selectedOptions[0].dataset.price);
-      const total = price * (qty.value || 1);
-      calcPrice.textContent = `মোট: ${total}৳`;
-      return total;
+    if (user && user.id) {
+      document.getElementById("result").innerText =
+        "✅ আপনার Chat ID: " + user.id;
+    } else {
+      document.getElementById("result").innerText =
+        "❌ কোনো আইডি পাওয়া যায়নি।";
     }
-
-    service.addEventListener('change', updatePrice);
-    qty.addEventListener('input', updatePrice);
-    updatePrice();
-
-    copyAmount.addEventListener('click', () => {
-      const total = updatePrice();
-      navigator.clipboard.writeText(total);
-    });
-
-    fillAmount.addEventListener('click', () => {
-      const total = updatePrice();
-      amountInput.value = total;
-    });
-
-    // --- Deposit form handling ---
-    const form = document.getElementById('depositForm');
-    const panel = document.getElementById('successPanel');
-    const summary = document.getElementById('summary');
-    const errorBox = document.getElementById('errorBox');
-
-    function fmtBDT(n) { return new Intl.NumberFormat('bn-BD', { style: 'currency', currency: 'BDT', maximumFractionDigits: 0 }).format(Number(n||0)); }
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      errorBox.classList.add('hidden');
-      errorBox.textContent = '';
-
-      const data = {
-        service: service.value,
-        qty: qty.value,
-        method: document.getElementById('method').value,
-        amount: document.getElementById('amount').value,
-        sender: document.getElementById('sender').value,
-        trxid: document.getElementById('trxid').value.trim().toUpperCase(),
-        note: document.getElementById('note').value.trim(),
-        time: new Date().toLocaleString('bn-BD')
-      };
-
-      if (data.amount < 10) { showError('ন্যূনতম 10 টাকা ডিপোজিট করতে হবে'); return; }
-      if (!/^01\d{9}$/.test(data.sender)) { showError('সঠিক মোবাইল নম্বর দিন'); return; }
-      if (!data.trxid || data.trxid.length < 6) { showError('সঠিক ট্রানজ্যাকশন আইডি দিন'); return; }
-
-      // Render success summary
-      summary.innerHTML = '';
-      const entries = [
-        ['সার্ভিস', data.service + ` (${data.qty} পিস)`],
-        ['পেমেন্ট মেথড', data.method],
-        ['অ্যামাউন্ট', fmtBDT(data.amount)],
-        ['প্রেরকের নম্বর', data.sender],
-        ['ট্রানজ্যাকশন আইডি', data.trxid],
-        ['সময়', data.time],
-        data.note ? ['নোট', data.note] : null,
-      ].filter(Boolean);
-
-      for (const [k, v] of entries) {
-        const dt = document.createElement('div'); dt.className = 'font-medium'; dt.textContent = k;
-        const dd = document.createElement('div'); dd.className = 'text-gray-700 dark:text-gray-300'; dd.textContent = v;
-        summary.append(dt, dd);
-      }
-
-      panel.classList.remove('hidden');
-      panel.scrollIntoView({ behavior: 'smooth' });
-
-      // --- Send to Telegram Bot ---
-      const BOT_TOKEN = "7548611254:AAHUWx2WlGQlF975ORmwmHsS7_gTHKG0sXE"; // এখানে আপনার আসল টোকেন বসান
-      const CHAT_ID  = "7358825471";    // এখানে আপনার চ্যাট আইডি বসান
-
-      const textMsg = `
-🟢 নতুন ডিপোজিট সাবমিশন
-━━━━━━━━━━━━━━━
-📌 সার্ভিস: ${data.service} (${data.qty} পিস)
-📌 মেথড: ${data.method}
-💰 এমাউন্ট: ${data.amount}৳
-👤 প্রেরক: ${data.sender}
-🔑 ট্রানজ্যাকশন আইডি: ${data.trxid}
-🕒 সময়: ${data.time}
-${data.note ? "📝 নোট: " + data.note : ""}
-`;
-
-      fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ chat_id: CHAT_ID, text: textMsg })
-      })
-      .then(r => r.json())
-      .then(res => console.log("Telegram response:", res))
-      .catch(err => console.error("Telegram error:", err));
-    });
-
-    function showError(msg) {
-      errorBox.textContent = msg;
-      errorBox.classList.remove('hidden');
-    }
-
-    // Card click auto-select
-    document.querySelectorAll('.method').forEach(card => {
-      card.addEventListener('click', (e) => {
-        if (e.target.closest('button')) return;
-        document.getElementById('method').value = card.dataset.name;
-      });
-    });
   </script>
 </body>
 </html>
