--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="profile">
       <div class="avatar">👤</div>
       <div>
-        <div class="username">SAIDUL</div>
+        <div class="username">User</div>
         <div class="userid">ID: <span id="uid"></span></div>
       </div>
     </div>
