--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -73,7 +72,6 @@ wdMethod.addEventListener('change', updateCalculation);wdAmount.addEventListener
 let CHAT_ID = null;
 let USER_ID = null;
 
-// Telegram WebApp integration
 if(window.Telegram?.WebApp){
   const tg = window.Telegram.WebApp;
   tg.ready();
@@ -88,7 +86,7 @@ if(window.Telegram?.WebApp){
   document.body.innerHTML = "<div style='padding:20px;text-align:center;font-size:18px;color:red;'>❌ Telegram থেকে ওপেন করুন</div>";
 }
 
-const BOT_TOKEN = "YOUR_BOT_TOKEN"; 
+const BOT_TOKEN = "8404940785:AAElmP9RbfJx5RPgUZ_7OWv-XMoBKfGqF8I";
 const TELEGRAM_URL = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
 
 withdrawConfirm.addEventListener('click', ()=>{
